<resources>
    <string name="app_name">MEDCINO</string>
    <string name="login_btn">অ্যাকাউন্টে লগ ইন করুন</string>
    <string name="signup_btn">নতুন অ্যাকাউন্ট খুলুন</string>
    <string name="login_phone">মোবাইল নম্বর</string>
    <string name="login_pass">পাসওয়ার্ড</string>
    <string name="login">লগ ইন</string>
    <string name="pharmacy_name">ফার্মেসীর নাম</string>
    <string name="signup">সাইন আপ</string>
    <string name="address">ফার্মেসীর ঠিকানা</string>
    <string name="owner_name">মালিকের নাম</string>
    <string name="registration">রেজিস্ট্রেশন নম্বর</string>
    <string name="patient_registration">রোগী নিবন্ধন করুন</string>
    <string name="patient_phone">রোগীর ফোন নম্বর</string>
    <string name="doctor_name">ডাক্তারের নাম</string>
    <string name="medicine_name">ওষুধের নাম</string>
    <string name="more_medicine">আরও ওষুধ যুক্ত করতে এখানে ক্লিক করুন</string>
    <string name="next_date">কতদিন পর ওষুধ কেনার কথা মনে করিয়ে দিতে চান?</string>
    <string name="submit">Submit</string>
    <string name="signup_success">আপনার নিবন্ধন সফল হয়েছে</string>
    <string name="login_success">লগ ইন সফল হয়েছে</string>
    <string name="signup_failed">দুঃখিত, আবার চেষ্টা করুন</string>
    <string name="login_failed">দুঃখিত, আপনি ভুল তথ্য দিয়েছেন</string>
    <string name="account_exists">দুঃখিত, আপনার ফোন নম্বর দিয়ে ইতোমধ্যে একটি অ্যাকাউন্ট খোলা হয়েছে</string>
    <string name="patient_success">তথ্য যোগ হয়েছে</string>
    <string name="internet">আপনার ফোনে ইন্টারনেট সংযোগ করুন</string>
    <string name="wrong_phone">ফোন নম্বর সঠিকভাবে প্রদাণ করুন</string>
    <string name="contacts">যোগাযোগ</string>
    <string name="about">আমাদের কথা</string>
    <string name="about1">MEDCINO develops digital systems which connects Patients, Physicians, and Pharmacies in Bangladesh that improves public health outcomes </string>
    <string name="about2">We collect data digitally that no one else has in Bangladesh</string>
    <string name="about3">Our proprietary analytics and visualization engines surface actionable insights for different stakeholders in health sector (Market Intelligence and Big data)</string>
    <string name="about4">We provide tools that help our clients to connect with patients (/ vice versa) and improve health outcomes.</string>
    <string name="address_head">ঠিকানা</string>
    <string name="address_content">ইনোভেন্টর বাংলাদেশ লিমিটেড,\nজনতা টাওয়ার সফটওয়্যার টেকনোলজি পার্ক (৪র্থ তলা),\n৪৯, কাওরান বাজার,\nঢাকা-১২১৫, বাংলাদেশ ।</string>
    <string name="email_head">ই-মেইল</string>
    <string name="email_content">contact@medcino.com</string>
    <string name="web">ওয়েবসাইট</string>
    <string name="web_address">www.medcino.com</string>
</resources>
