<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_patient_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jahid.medcino.PatientRegisterActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/patient_registration"
        android:id="@+id/patientRegistrationTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patientRegistrationTextView"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/patientPhoneEditText"
                android:hint="@string/patient_phone"
                android:background="@drawable/border"
                android:layout_marginBottom="10dp"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/doctorNameEditText"
                android:hint="@string/doctor_name"
                android:background="@drawable/border"
                android:layout_marginBottom="10dp"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/medicineNameEditText"
                android:hint="@string/medicine_name"
                android:background="@drawable/border"
                android:layout_marginBottom="10dp"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/medicine1EditText"
                android:visibility="gone"
                android:hint="@string/medicine_name"
                android:background="@drawable/border"
                android:layout_marginBottom="10dp"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/medicine2EditText"
                android:visibility="gone"
                android:hint="@string/medicine_name"
                android:background="@drawable/border"
                android:layout_marginBottom="10dp"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/medicine3EditText"
                android:visibility="gone"
                android:hint="@string/medicine_name"
                android:background="@drawable/border"
                android:layout_marginBottom="10dp"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/medicine4EditText"
                android:visibility="gone"
                android:hint="@string/medicine_name"
                android:background="@drawable/border"
                android:layout_marginBottom="10dp"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/medicine5EditText"
                android:visibility="gone"
                android:hint="@string/medicine_name"
                android:background="@drawable/border"
                android:layout_marginBottom="10dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/more_medicine"
                android:layout_gravity="center"
                android:textColor="@android:color/holo_blue_dark"
                android:id="@+id/addmedicineTextView" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/nestDateEditText"
                android:hint="@string/next_date"
                android:background="@drawable/border"
                android:layout_marginBottom="10dp"
                android:gravity="center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@drawable/border"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:onClick="Sumbit"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
